# ctlst-hw-demo-rig

./: .gitignore  LICENSE  README.md  gui.py  makefile
atomics/demo/: CMakeLists.txt
atomics/demo/panel/fsm/: CMakeLists.txt  declaration.py  demo_panel_fsm_exec.c  demo_panel_fsm_proto.h
config/: flow_cont.xml  flow_generators.xml  flow_io_adc.xml  flow_io_gpio.xml  flow_main_imu.xml  swsys.xml
scripts/: autoexec.sh  catpilot.sh  ftp.sh  upload.sh
